--- a/StockAPI/StockAPI/Web.config
+++ b/StockAPI/StockAPI/Web.config
@@ -10,6 +10,7 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+	<add key="StockAry" value="[3049,2330,0050,1454,5283]"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
